test/Fail/Issue5396.err
Issue5396.agda:28.13-17: error: [UnequalTerms]
The terms
  not 0
and
  true
are not equal at type Bool
when checking that the expression refl has type
not (0' unit) ≡ true
